changes in index file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>index file data</p>
     <p>hello zaid here</p>
-    <p>master file</p>
+    <p>demo file</p>
+    <p>demo file hai vaii</p>
 </body>
 </html>
